--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="col-9 col-lg-4">
                 <div class="card border-primary border-2">
-                    <div class="card-header text-center text-primary">Most Populer</div>
+                    <div class="card-header text-center text-primary">Most Popular</div>
                     <div class="card-body text-center py-5">
                         <h4 class="card-title">Complete Edition</h4>
                         <p class="lead card-subtitle">eBook download & all updates</p>
